--- a/References.bib
+++ b/References.bib
@@ -20,6 +20,17 @@ doi = {10.18637/jss.v076.i01},
 author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B and Betancourt, M and Brubaker, MA and Guo, J and Li, P and Riddell, A}
 }
 
+@article{collins2013seven,
+author = {Collins, R. A. and Cruickshank, R. H.},
+title = {The seven deadly sins of DNA barcoding},
+journal = {Molecular Ecology Resources},
+volume = {13},
+number = {6},
+pages = {969-975},
+doi = {https://doi.org/10.1111/1755-0998.12046},
+year = {2013}
+}
+
 @article{gelman1992iterative,
 author = {Gelman, A and Rubin, DB},
 title = {Inference from Iterative Simulation Using Multiple Sequences},
@@ -188,16 +199,6 @@ year = {1992}
   doi={https://doi.org/10.3389/fevo.2022.859099}
 }
 
-@article{phillips2023vlf,
-  title={{VLF}: {A}n {R} package for the analysis of very low frequency variants in {DNA} sequences},
-  author={Phillips, JD and Athey, TBT and McNicholas, PD and Hanner, RH},
-  journal={Biodiversity Data Journal},
-  volume={11},
-  pages={e96480},
-  year={2023},
-  doi={https://doi.org/10.3897/BDJ.11.e96480}
-}
-
 @inbook{phillips2024measure,
 author = {Phillips, JD and Griswold, CK and Young, RG and Hubert, N and Hanner, H},
 editor = {DeSalle, Robert},
@@ -212,7 +213,7 @@ doi = {10.1007/978-1-0716-3581-0_24},
 
 @article{rannala2003bayes,
   author = {Rannala, B and Yang, Z},
-  title = {Bayes estimation of species divergence times and ancestral population sizes using DNA sequences from multiple loci},
+  title = {Bayes estimation of species divergence times and ancestral population sizes using {DNA} sequences from multiple loci},
   journal = {Genetics},
   year = {2003},
   volume = {164},
