--- a/References.bib
+++ b/References.bib
@@ -136,6 +136,17 @@ year = {1992}
   pages = {235--248}
 }
 
+@article{liu2015simulation,
+  author       = {Liu, Yuhong and Gelman, Andrew and Zheng, Tian},
+  title        = {Simulation-efficient shortest probability intervals},
+  journal      = {Statistical Computing},
+  volume       = {25},
+  pages        = {809--819},
+  year         = {2015},
+  doi          = {10.1007/s11222-015-9563-8}
+}
+
+
 @article{mather2019practical,
     author = {Mather, N and Traves, SM and Ho, SYW},
     title = {A practical introduction to sequentially {M}arkovian coalescent methods for estimating demographic history from genomic data},
