--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -68,11 +68,11 @@
 
 \begin{abstract}
 
-A simple statistical model of the DNA barcodw gap is outlined. Specifically, \\ accuracy of novel nonparametric metrics, inspired by coalescent theory, to characterize the extent of propotional overlap/separation in pairwise genetic distances within and among species, is explored in a Bayesian context using Empirical Cumulative \\ Distribution Function (ECDF). The proposed estimators and model have a strong potential to shed light on interesting foundational and applied questions concerning specimen identification and species delineation for biodiversity conservation and \\ managenment.
+A simple statistical model of the DNA barcode gap is outlined. Specifically, \\ accuracy of recently introduced novel nonparametric metrics, inspired by coalescent theory, to characterize the extent of proportional overlap/separation in pairwise genetic distances within and among species, is explored in frequentist and Bayesian contexts using the Empirical Cumulative Distribution Function (ECDF). The proposed \\ maximum likelihood estimators and Bayesian model have a strong potential to shed light on interesting foundational and applied research questions concerning specimen identification and species delineation for biodiversity conservation and management.
 
 \end{abstract}
 
-\textbf{Keywords}: Bayesian inference, DNA barcoding, intraspecific genetic distance, \\ interspecific genetic distance, specimen identification, species discovery, Stan 
+\textbf{Keywords}: Bayesian/frequentist inference, DNA barcoding, intraspecific genetic \\ distance, interspecific genetic distance, specimen identification, species discovery
 
 \vspace{2mm}
 
