--- a/References.bib
+++ b/References.bib
@@ -22,7 +22,7 @@ author = {Carpenter, B and Gelman, A and Hoffman, MD and Lee, D and Goodrich, B 
 
 @article{collins2013seven,
 author = {Collins, R. A. and Cruickshank, R. H.},
-title = {The seven deadly sins of DNA barcoding},
+title = {The seven deadly sins of {DNA} barcoding},
 journal = {Molecular Ecology Resources},
 volume = {13},
 number = {6},
@@ -74,7 +74,7 @@ year = {1992}
 }
 
 @article{hebert2004identification,
-  title={Identification of Birds through DNA Barcodes},
+  title={Identification of Birds through {DNA} Barcodes},
   author={Hebert, Paul DN and Stoeckle, Mark Y and Zemlak, Tyler S and Francis, Charles M},
   journal={PLoS Biol},
   volume={2},
@@ -180,6 +180,17 @@ year = {1992}
   publisher={Public Library of Science},
   doi={https://doi.org/10.1371/journal.pbio.0030422}
 }
+
+@article{pentinsaari2016molecular,
+  author = {Pentinsaari, Mikko and Salmela, Heli and Mutanen, Marko and et al.},
+  title = {Molecular evolution of a widely-adopted taxonomic marker (COI) across the animal tree of life},
+  journal = {Scientific Reports},
+  volume = {6},
+  pages = {35275},
+  year = {2016},
+  doi = {10.1038/srep35275}
+}
+
 
 @article{phillips2020hacsim,
   title={{\tt HACSim}: {A}n {R} package to estimate intraspecific sample sizes for genetic diversity assessment using haplotype accumulation curves},
