--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -68,7 +68,7 @@
 
 \begin{abstract}
 
-A simple statistical model of the DNA barcode gap is outlined. Specifically, \\ accuracy of recently introduced novel nonparametric metrics, inspired by coalescent theory, to characterize the extent of proportional overlap/separation in pairwise genetic distances within and among species, is explored in frequentist and Bayesian contexts using the Empirical Cumulative Distribution Function (ECDF) to estimate probabilities associated with extreme tail distribution quantiles. The proposed maximum likelihood estimators and Bayesian model are demonstrated on CYTB gene sequence data from two \textit{Agabus} diving beetle species exhibiting limits in the extent of representative \\ sampling. Obtained results have a strong potential to shed light on interesting \\ foundational and applied research questions concerning DNA-based specimen \\ identification and species delineation for studies in evolutionary biology and ecology, as well as biodiversity conservation and management.
+A simple statistical model of the DNA barcode gap is outlined. Specifically, \\ accuracy of recently introduced novel nonparametric metrics, inspired by coalescent theory, to characterize the extent of proportional overlap/separation in maximum and minimum pairwise genetic distances within and among species, is explored in frequentist and Bayesian contexts using the Empirical Cumulative Distribution Function (ECDF) to estimate probabilities associated with extreme tail distribution quantiles. The \\ proposed maximum likelihood estimators and Bayesian model are demonstrated on CYTB gene sequence data from two \textit{Agabus} diving beetle species exhibiting limits in the extent of representative sampling. Obtained results have a strong potential to shed light on interesting foundational and applied research questions concerning DNA-based specimen identification and species delineation for studies in evolutionary biology and ecology, as well as biodiversity conservation and management of wide ranging taxa.
 
 \end{abstract}
 
@@ -135,7 +135,7 @@ q'_x &=  \mathbb{P}(d'_{XY} \leq b) \notag \\
      &= \hat{F}_{d'_{XY}}(b)
 \end{align}
 
-\noindent noting that there are no pairwise genetic distances less than the minimum and greater than the maximum, and that all pairwise genetic distances are greater than or equal to the minimum and less than or equal to the maximum. From this, it can be seen that $\hat{F}_{d_{ij}}(b) = 1$ in Equations (8) and (10). Given $n$ increasing-ordered data points, the (discrete) ECDF, $\hat{F}_n(t) = \frac{1}{n}\sum_{i = 1}^n\mathds{1}_{[x_i \leq t]}$, comprises a step function having jump discontinuities of size $\frac{1}{n}$ at each sample observation ($x_i$), excluding ties (or steps of weight $\frac{i}{n}$ with tied observations), where $\mathds{1}(x)$ is the indicator function. Equations (8)-(11) herein clearly demonstrate the asymmetric directionality of the proposed metrics. Furthermore, calculation of the DNA barcode gap estimators is straightforward as they implicitly account for total distribution area (including overlap). Nevertheless, the total areas bounded by intraspecific and interspecific distributions on [$a$, $b$], and combined distributions on [$a'$, $b$] (see \textbf{Figure 1}) are given by
+\noindent noting that there are no pairwise genetic distances less than the minimum and greater than the maximum, and that all pairwise genetic distances are greater than or equal to the minimum and less than or equal to the maximum. From this, it can be seen that $\hat{F}_{d_{ij}}(b) = 1$ in Equations (8) and (10). Given $n$ increasing-ordered data points, the (discrete) ECDF, $\hat{F}_n(t) = \frac{1}{n}\sum_{i = 1}^n\mathds{1}_{[x_i \leq t]}$, comprises a step function having jump discontinuities of size $\frac{1}{n}$ at each sample observation ($x_i$), excluding ties (or steps of weight $\frac{i}{n}$ with duplicate observations), where $\mathds{1}(x)$ is the indicator function. Note, $\mathbb{P}(X = t) \neq 0$. Equations (8)-(11) herein clearly demonstrate the asymmetric directionality of the proposed metrics. Furthermore, calculation of the DNA barcode gap estimators is straightforward as they implicitly account for total distribution area (including overlap). Nevertheless, the total areas bounded by intraspecific and interspecific distributions on [$a$, $b$], and combined distributions on [$a'$, $b$] (see \textbf{Figure 1}) are given by
 
 \begin{align}
 \notag A &= p_x + q_x \\ 
