--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -68,7 +68,7 @@
 
 \begin{abstract}
 
-A simple statistical model of the DNA barcode gap is outlined. Specifically, \\ accuracy of recently introduced novel nonparametric metrics, inspired by coalescent theory, to characterize the extent of proportional overlap/separation in maximum and minimum pairwise genetic distances within and among species, is explored in frequentist and Bayesian contexts using the Empirical Cumulative Distribution Function (ECDF) to estimate probabilities associated with extreme tail distribution quantiles. The \\ proposed maximum likelihood estimators and Bayesian model are demonstrated on CYTB gene sequence data from two \textit{Agabus} diving beetle species exhibiting limits in the extent of representative sampling. Obtained results have a strong potential to shed light on interesting foundational and applied research questions concerning DNA-based specimen identification and species delineation for studies in evolutionary biology and ecology, as well as biodiversity conservation and management of wide ranging taxa.
+A simple statistical model of the DNA barcode gap is outlined. Specifically, \\ accuracy of recently introduced novel nonparametric metrics, inspired by coalescent theory, to characterize the extent of proportional overlap/separation in maximum and minimum pairwise genetic distances within and among species, is explored in frequentist and Bayesian contexts using the Empirical Cumulative Distribution Function (ECDF) to estimate probabilities associated with positively skewed extreme tail distribution quantiles bounded on the closed unit interval [0, 1]. The proposed maximum likelihood estimators and Bayesian model are demonstrated on CYTB gene sequence data from two \textit{Agabus} diving beetle species exhibiting limits in the extent of representative \\ sampling. Obtained results have a strong potential to shed light on interesting \\ foundational and applied research questions concerning DNA-based specimen \\ identification and species delineation for studies in evolutionary biology and ecology, as well as biodiversity conservation and management of wide ranging taxa.
 
 \end{abstract}
 
